--- a/detailsStudent.html
+++ b/detailsStudent.html
@@ -4,30 +4,30 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-	<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <style>
         #layout{
             background:#008CBA url("http://zurb.com/playground/uploads/upload/upload/407/stars.svg");
             margin-left: 10%;
-            margin-top:10%;
+            margin-top:5%;
+        }
+        .v  li{
+            margin-left:10px;
         }
       </style>
   </head>
-  <body>
-    <div class="container">
-    <nav>
-    <ul class="nav nav-tabs nav-justified">
-  <li role="presentation" class="active"><a href="#">Home</a></li>
-  <li role="presentation"><a href="#">Profile</a></li>
-  <li role="presentation"><a href="#">Messages</a></li>
-        </ul>
-    </nav>
-      </div>
+<body>
+<nav class="navbar navbar-inverse navbar-fixed-top">
+  <div class="container-fluid">
+    <ul class="nav navbar-nav  nav-tabs v">
+      <li class="active"><a href="#">Home</a></li>
+      <li><a href="#">Link</a></li>
+      <li><a href="#">Link</a></li>
+    </ul>
+  </div>
+</nav>
     <div class="container">
     <div class="row">
     <div class="col-sm-10 col-md-10 col-md-offset-2" id ="layout">
@@ -35,9 +35,11 @@
         <div class="form-group">
             </br>
             </br>
-            <input type="text" class="form-control" id="name" placeholder="Student Name">
+            <input type="text" class="form-control" id="studentid" placeholder="Student Id" required>
             </br>
-            <input type="number" class="form-control" id="age" placeholder="Age">
+            <input type="text" class="form-control" id="name" placeholder="Student Name" required>
+            </br>
+            <input type="number" class="form-control" id="age" placeholder="Age" required>
             </br>
             <div id="input-type" class="row">
                 <div class="col-sm-3 col-md-3">
@@ -140,6 +142,8 @@
     </div>
 </div>
 </div>
+
+	  <script src="js/app.js"></script>
 </body>
 </html>
   
