--- a/detailsStudent.html
+++ b/detailsStudent.html
@@ -45,12 +45,12 @@
                     </div>
                 <div class="col-sm-3 col-md-3">
                     <label class="radio-inline">
-                        <input name="gender" id="male" value="Male" type="radio" />Male
+                        <input name="gender" id="gender" value="Male" type="radio" />Male
                     </label>
                 </div>
                 <div class="col-sm-3 col-md-3">
                     <label class="radio-inline">
-                    <input name="gender" id="female" value="Female" type="radio" />Female
+                    <input name="gender" id="gender" value="Female" type="radio" />Female
                     </label>
                 </div>
             </div>
@@ -61,17 +61,17 @@
             </div>
             <div class="col-sm-3 col-md-3">
                 <label class="radio-inline">
-                    <input name="status" id="parentalstatusb" value="Male" type="radio" />Both
+                    <input name="status" id="parentalstatus" value="Male" type="radio" />Both
                 </label>
             </div>
             <div class="col-sm-3 col-md-3">
                 <label class="radio-inline">
-                    <input name="status" id="parentalstatuss" value="Female" type="radio" />Single
+                    <input name="status" id="parentalstatus" value="Female" type="radio" />Single
                 </label>
             </div>
            <div class="col-sm-3 col-md-3">
                 <label class="radio-inline">
-                    <input name="status" id="parentalstatuso" value="Female" type="radio" />Orphan
+                    <input name="status" id="parentalstatus" value="Female" type="radio" />Orphan
                 </label>
             </div>
             </div>
@@ -82,12 +82,12 @@
                 </div>
                 <div class="col-sm-3 col-md-3">
                 <label class="radio-inline">
-                    <input name="family" id="joint" value="joint" type="radio" />Joint
+                    <input name="family" id="type" value="joint" type="radio" />Joint
                 </label>
                 </div>
                 <div class="col-sm-3 col-md-3">
                     <label class="radio-inline">
-                    <input name="family" id="nuclear" value="Nuclear" type="radio"          />Nuclear
+                    <input name="family" id="type" value="Nuclear" type="radio"          />Nuclear
                     </label>
                 </div>
             </div>
@@ -107,7 +107,7 @@
                 </div>
             <div class="col-xs-12 col-md-4">
                 <div class="dropdown">
-                    <button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">Order of Birth
+                    <button class="btn btn-default dropdown-toggle" type="button" id="menu2" data-toggle="dropdown">Order of Birth
                     <span class="caret"></span></button>
                     <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
                     <li role="presentation"><a role="menuitem" tabindex="-1" href="#">First Born</a></li>
@@ -118,7 +118,7 @@
             </div>
             <div class="col-xs-12 col-md-4">
             <div class="dropdown">
-            <button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">Parent education level
+            <button class="btn btn-default dropdown-toggle" type="button" id="menu3" data-toggle="dropdown">Parent education level
             <span class="caret"></span></button>
             <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
             <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Primary</a></li>
@@ -129,7 +129,7 @@
             </div>
         </div>
         </br>
-        <input type="number" class="form-control" id="age" placeholder="Family Income" required>
+        <input type="number" class="form-control" id="income" placeholder="Family Income" required>
           </br>
         <div class="text-center">
         <button type="submit" class="btn btn-success">Submit</button>
