--- a/myclass.html
+++ b/myclass.html
@@ -18,7 +18,8 @@
         }
       </style>
   </head>
-  <form>
+  <form method="POST" action="myclass.php">
+  
         <div class="form-group">
             <div id="input-type" class="row">
                 <div class="col-sm-8 col-md-8>
