--- a/myclass.html
+++ b/myclass.html
@@ -18,8 +18,7 @@
         }
       </style>
   </head>
-  <form method="POST" action="myclass.php">
-  
+  <form method="POST action="process1.php">
         <div class="form-group">
             <div id="input-type" class="row">
                 <div class="col-sm-8 col-md-8>
@@ -311,7 +310,7 @@
             </br>
             <div id="input-type" class="row">
                 <div class="col-sm-8 col-md-8">
-                <label for="input-type">19. school work is hard to do</labelo
+                <label for="input-type">19. school work is hard to do</label>
                     </div>
                 <div class="col-sm-2 col-md-2">
                     <label class="radio-inline">
@@ -363,7 +362,7 @@
                     </div>
                 <div class="col-sm-2 col-md-2">
                     <label class="radio-inline">
-                        <input name="answer" id="q22" value="1" type="radio" />yes
+                        <input name="answer" id="q22" value="1" type="radio" />vyes
                     </label>
                 </div>
                 <div class="col-sm-2 col-md-2">
@@ -372,7 +371,7 @@
                     </label>
                 </div>
             </div>
-            </br
+            </br>
             <div id="input-type" class="row">
                 <div class="col-sm-8 col-md-8">
                 <label for="input-type">23. A few students in my class want to be first all the time</label>
@@ -419,5 +418,10 @@
                     <input name="answer" id="q25" value="0" type="radio" />no
                     </label>
                 </div>
+                <div class="align-center">
+                <input type="submit" value="submit"/>
+                </div>
+
             </div>
             </br>
+            
