--- a/WebAPP/detailsStudent.html
+++ b/WebAPP/detailsStudent.html
@@ -31,11 +31,12 @@
     <div class="container">
     <div class="row">
     <div class="col-sm-10 col-md-10 col-md-offset-2" id ="layout">
-      <form>
+      <form method="POST" action="phpdb.php">
+	  
         <div class="form-group">
             </br>
             </br>
-            <input type="text" class="form-control" id="studentid" placeholder="Student Id" required>
+            <input type="text" class="form-control" name="studentid" placeholder="Student Id" required>
             </br>
             <input type="text" class="form-control" id="name" placeholder="Student Name" required>
             </br>
