--- a/WebAPP/detailsStudent.html
+++ b/WebAPP/detailsStudent.html
@@ -21,9 +21,9 @@
 <body>
 <nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container-fluid">
-    <ul class="nav navbar-nav  nav-tabs v">
+   <ul class="nav navbar-nav  nav-tabs v">
       <li class="active"><a href="#">Home</a></li>
-      <li><a href="#">Link</a></li>
+      <li><a href="dlas.html">DLSAS</a></li>
       <li><a href="#">Link</a></li>
     </ul>
   </div>
