--- a/WebAPP/detailsStudent.html
+++ b/WebAPP/detailsStudent.html
@@ -23,7 +23,7 @@
   <div class="container-fluid">
    <ul class="nav navbar-nav  nav-tabs v">
       <li class="active"><a href="#">Home</a></li>
-      <li><a href="dlas.html">DLSAS</a></li>
+      <li><a href="dlsas.html">DLSAS</a></li>
       <li><a href="#">Link</a></li>
     </ul>
   </div>
