--- a/25questions.html
+++ b/25questions.html
@@ -79,13 +79,12 @@
 <input type="radio" name="q25" value="Yes"> Yes<br>
   <input type="radio" name="q25" value="No"> No<br>
 
-
-
-
+<br>
+<input type="submit" value="submit">
   
 </form>
 
-<p><b>Note:</b> When a user clicks on a radio-button, it becomes checked, and all other radio-buttons with equal name become unchecked.</p>
+
 
 </body>
 </html>
